# axum-chat-app

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  diesel.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
docker/: .env  Dockerfile  docker-compose.yml  start.sh
docker/conf/: nginx.conf
migrations/2024-12-21-032026_create_users/: down.sql  up.sql
migrations/2024-12-21-032032_create_groups/: up.sql
migrations/2024-12-21-033112_create_messages/: up.sql
src/: api_docs.rs  database.rs  lib.rs  logger.rs  main.rs  router.rs  schema.rs
src/enums/: errors.rs  mod.rs  routes.rs  types.rs
src/features/: mod.rs
src/features/auth/: dto.rs  handlers.rs  middleware.rs  mod.rs  model.rs  routes.rs
src/features/chat/: dto.rs  handlers.rs  mod.rs  model.rs  routes.rs  services.rs
src/features/groups/: dto.rs  handlers.rs  models.rs  routes.rs  services.rs
src/features/users/: dto.rs  handlers.rs  mod.rs  models.rs  routes.rs  services.rs
src/socket/: handlers.rs  mod.rs  models.rs
src/utils/: jwt.rs
